ブロック、追加修正。

--- a/src/scss/_c-media.scss
+++ b/src/scss/_c-media.scss
@@ -1,12 +1,10 @@
 .c-media {
   width: 44%;
-  display: inline-block;
-  &:nth-child(odd) {
-    padding-right: 4px;
-  }
-  &:nth-child(even) {
-    padding-left: 4px;
-  }
+}
+.p-hero_media{
+  display: inline-flex;
+  flex-wrap:wrap;
+  justify-content:space-around;
 }
 .c-media_container {
   background-color: #F5F1F1;
@@ -41,7 +39,15 @@
   text-align: left;
 }
 @media screen and (min-width: 768px) {
-  .c-media {
-    width: 18%;
+  background-color: #17a2b8;
+  .p-hero_media{
+    .c-media {
+      width: 20%;
+    }
+    .c-media:first-child(1) {
+      margin-right: 0;
+    }
   }
+
+
 }
